<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SettingsActivity">

    <data>
        <variable
            name="settingsViewModel"
            type="com.psyal5.comp3018_cw1.viewmodel.SettingsViewModel" />
    </data>

    <RelativeLayout
        android:id="@+id/settingsContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <TextView
                android:id="@+id/settingsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="44dp"
                android:text="@string/settingsText"
                android:textSize="50sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/buttonBar"
                app:layout_constraintTop_toBottomOf="@+id/settingsText"
                app:layout_constraintVertical_bias="1.0"
                tools:layout_editor_absoluteX="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/backgroundText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/settingsText"
                        android:layout_marginTop="20dp"
                        android:text="@string/backgroundText"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:id="@+id/backgroundSet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintWidth_percent="1">

                        <EditText
                            android:id="@+id/redEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/redHint"
                            android:inputType="number"
                            android:text="@={settingsViewModel.redValue}" />

                        <EditText
                            android:id="@+id/greenEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/greenHint"
                            android:inputType="number"
                            android:text="@={settingsViewModel.greenValue}" />

                        <EditText
                            android:id="@+id/blueEditText"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:hint="@string/blueHint"
                            android:inputType="number"
                            android:text="@={settingsViewModel.blueValue}" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/playbackSpeedText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="@string/playbackSpeedText"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/playbackSpeedEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:hint="@string/playbackSpeedHint"
                        android:inputType="number"
                        android:text="@={settingsViewModel.playbackSpeed}"/>

                    <Button
                        android:id="@+id/updateButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="1dp"
                        android:layout_marginBottom="4dp"
                        android:onClick="@{() -> settingsViewModel.onUpdateButtonClick() }"
                        android:text="@string/updateText" />
                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/buttonBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintWidth_percent="1">

                <Button
                    android:id="@+id/listButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> settingsViewModel.onListButtonClick() }"
                    android:text="@string/listText" />

                <Button
                    android:id="@+id/settingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/settingsText" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>
</layout>
